# rust_mnemonic

./: Cargo.toml  README.md
src/: main.rs
